@@ -4,6 +4,8 @@
   * Set the JPEG image colorspace after the columns / rows are set (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21059).
   * Potential gray images are in either the gray or sRGB colorspaces.
+  * Restore MagickSetImageEndian() method (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?t=20425&p=81525).
 
 2012-05-20  6.7.7-1 Anthony Thyssen <A.Thyssen@griffith...>
   * Delegates now 'spawn' faster (replaced 2 second sleep!) (for "show:")
